@@ -1,7 +1,7 @@
 import re
 
 #FIXME: This function should really only call a show version parser that does
-# all the heavy lifting and vendors more than just the vendor.
+# all the heavy lifting and extracts more than just the vendor.
 def vendor(scope, force = 0):
     # If the vendor is cached, return it.
     vendor = scope.get('_stdlib.device.vendor')
