@@ -12,14 +12,65 @@
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+import string, re
 from AbstractMethod import AbstractMethod
+
+flags         = re.I | re.M
+printable     = re.escape(string.printable)
+ignore        = r'[\x1b\x07]'
+newline       = r'[\r\n]'
+prompt_start  = r'(?:' + newline + r'[^' + printable + r']?|' + ignore + '+)'
+prompt_chars  = r'[\-\w\(\)@:~]'
+filename      = r'(?:[\w+\-\._]+)'
+path          = r'(?:(?:' + filename + r')?(?:/' + filename + r')*/?)'
+any_path      = r'(?:' + path + r'|~' + path + r'?)'
+host          = r'(?:[\w+\-\.]+)'
+user          = r'(?:[\w+\-]+)'
+user_host     = r'(?:(?:' + user + r'\@)?' + host + r')'
+prompt_re     = re.compile(prompt_start                 \
+                         + r'\[?'                       \
+                         + r'\w+'                       \
+                         + user_host + r'?'             \
+                         + r'[: ]?'                     \
+                         + any_path + r'?'              \
+                         + r'(?:\(' + filename + '\))?' \
+                         + r'\]?'                       \
+                         + r'[#>%\$] ?$', flags)
+
+cisco_user_re = re.compile(newline + r'username:', flags)
+junos_user_re = re.compile(newline + r'login:',    flags)
+unix_user_re  = re.compile(r'(user|login): ?$',    flags)
+pass_re       = re.compile(r'password:?',          flags)
+skey_re       = re.compile(r'(?:s\/key|otp-md4) (\d+) (\S+)')
+login_fail_re = re.compile(newline + r'[^\r\n]*(?:incorrect|failed|denied)', flags)
+
+# Test the prompt types. FIXME: Move into a unit test.
+prompts = [r'[sam123@home ~]$',
+           r'sam@knip:~/Code/exscript$',
+           r'sam@MyHost-X123>',
+           r'sam@MyHost-X123#',
+           r'MyHost-ABC-CDE123>',
+           r'MyHost-A1#',
+           r'MyHost-A1(config)#',
+           r'MyHost-A1(config)>',
+           r'FA/0/1/2/3>',
+           r'FA/0/1/2/3(config)>',
+           r'FA/0/1/2/3(config)#',
+           r'admin@s-x-a6.a.bc.de.fg:/#']
+for prompt in prompts:
+    if not prompt_re.search('\n' + prompt):
+        raise Exception("Prompt %s does not match exactly." % prompt)
+    if not prompt_re.search('this is a test\r\n' + prompt):
+        raise Exception("Prompt %s does not match." % prompt)
+    if prompt_re.search('some text ' + prompt):
+        raise Exception("Prompt %s matches incorrectly." % prompt)
 
 class Transport(object):
     def __init__(self, *args, **kwargs):
         self.prompt                = None
         self.host_type             = 'unknown'
         self.echo                  = kwargs.get('echo',    0)
-        self.timeout               = kwargs.get('timeout', 30)
+        self.timeout               = kwargs.get('timeout', 10)
         self.logfile               = kwargs.get('logfile', None)
         self.log                   = None
         self.on_data_received_cb   = kwargs.get('on_data_received',      None)
